# obs-credits

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RESEARCH-live-chat-apis.md
.claude/: settings.json
.claude/skills/: code-check.md  commit.md
data/locale/: en-US.ini
docs/: MVP-GUIDE.md  MVP-PROMPTS.md  RESEARCH.md
examples/: credits.json
installer/: obs-credits-installer.iss
src/: credits-parser.c  credits-parser.h  credits-renderer.c  credits-renderer.h  credits-source.c  credits-source.h  discord-fetch.c  discord-fetch.h  plugin-main.c  youtube-chat.c  youtube-chat.h
